--- a/format.css
+++ b/format.css
@@ -1,49 +1,21 @@
+body {
+  font-family: Calibri;
+  text-align: center;
+}
 
- body {
-    text-align: center;
-  }
-  
-  .game-container {
-    margin: 0px auto;
-  }
-  
-  .game-map {
-    position: relative;
-    width: 150%;
-    height: 150%;
-  }
+.game-container {
+  margin: 0px auto;
+}
 
-  #map-and-controls {
-    display: flex;
-    justify-content: center;
-  }
-  
-  #controls {
-    margin-left: 10px;
-    text-align: center;
-  }
-  
-  #controls #horiz {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  #controls button {
-    padding: 10px 10px;
-    margin-top: 10px;
-    background-color: #DDD;
-    border: 1px solid #000;
-    width: 38px;
-    height: 38px;
-    border-radius: 3px;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  button#right {
-    margin-left: 5px;
-  }
-  button#left {
-    margin-right: 5px;
-  }
+.game-map {
+  position: relative;
+}
+
+#map-and-controls {
+  display: flex;
+  justify-content: center;
+}
+
+#Button{
+  display: none;
+}
